--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.2",
     "gridfs-stream": "^1.1.1",
+    "mbtiles": "^0.8.0",
     "moment": "^2.10.3",
     "mongodb": "^2.0.33",
     "mongoose": "^4.0.3",
     "morgan": "^1.5.3",
     "multer": "^0.1.8",
     "passport": "^0.2.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "tilejson": "^0.13.0",
+    "tilelive": "^5.8.2",
+    "tilelive-http": "^0.8.0",
+    "tl": "^0.4.0"
   },
   "devDependencies": {},
   "scripts": {
